@@ -128,7 +128,7 @@ public class Resources {
 	private static Map<IFile, Long> createModificationStampMap(List<IFile> files){
 		Map<IFile, Long> map= new HashMap<>();
 		for (IFile file : files) {
-			map.put(file, new Long(file.getModificationStamp()));
+			map.put(file, Long.valueOf(file.getModificationStamp()));
 		}
 		return map;
 	}
