@@ -1,6 +1,6 @@
 package p;
 class T {
 	public String toString() {
-		return super.toString() + new Integer(1).toString();	
+		return super.toString() + Integer.valueOf(1).toString();	
 	}
 }
