@@ -3,5 +3,5 @@ package p; //6, 32, 6, 32
 import java.util.function.Supplier;
 
 public class A {
-	Supplier<String> a2= () -> (new Integer(0)).toString();
+	Supplier<String> a2= () -> (Integer.valueOf(0)).toString();
 }
