@@ -13,7 +13,7 @@ public class MultiGenerics<E> {
 	{
 		MultiGenerics<Integer> intVec = new MultiGenerics<Integer>();
 		MultiGenerics.bar(intVec, 42);
-		MultiGenerics.bar(intVec, new Integer(42));
+		MultiGenerics.bar(intVec, Integer.valueOf(42));
 		MultiGenerics<String> sVec = new MultiGenerics<String>();
 		MultiGenerics.bar(sVec, "X");
 	}
