@@ -623,7 +623,7 @@ public class BindingLabelsTest extends AbstractBindingLabelsTest {
 	}
 	
 	public void testMethodLabelVarargsReference3() throws Exception {
-		assertMethodLabelVarargsReference("1, 2, new Integer(3)");
+		assertMethodLabelVarargsReference("1, 2, Integer.valueOf(3)");
 	}
 	
 	private void assertMethodLabelVarargsReference(String args) throws CoreException, JavaModelException {
