@@ -68,7 +68,7 @@ public class ConstraintVariableFactory implements IConstraintVariableFactory {
 		}
 
 		if (ASTNodes.isLiteral(expression)){
-			Integer nodeType= new Integer(expression.getNodeType());
+			Integer nodeType= Integer.valueOf(expression.getNodeType());
 			if (! fLiteralMap.containsKey(nodeType)){
 				fLiteralMap.put(nodeType, new ExpressionVariable(expression));
 				if (REPORT) nrCreated++;
