@@ -109,7 +109,7 @@ public class PullUpMemberPage extends UserInputWizardPage {
 			if (!ACTION_PROPERTY.equals(property))
 				return null;
 			final MemberActionInfo info= (MemberActionInfo) element;
-			return new Integer(info.getAction());
+			return Integer.valueOf(info.getAction());
 		}
 
 		@Override
@@ -296,7 +296,7 @@ public class PullUpMemberPage extends UserInputWizardPage {
 	}
 
 	private static void putToStringMapping(final Map<String, Integer> result, final String[] actionLabels, final int actionIndex) {
-		result.put(actionLabels[actionIndex], new Integer(actionIndex));
+		result.put(actionLabels[actionIndex], Integer.valueOf(actionIndex));
 	}
 
 	private static void setActionForInfos(final MemberActionInfo[] infos, final int action) {
@@ -974,7 +974,7 @@ public class PullUpMemberPage extends UserInputWizardPage {
 					return;
 				final MemberActionInfo info= (MemberActionInfo) structured.getFirstElement();
 				editor.setItems(info.getAllowedLabels());
-				editor.setValue(new Integer(info.getAction()));
+				editor.setValue(Integer.valueOf(info.getAction()));
 			}
 		});
 
