@@ -404,7 +404,7 @@ public final class ContentAssistHistory {
 			int rank= 1;
 			for (Iterator<String> it= rhsCache.iterator(); it.hasNext(); rank++) {
 				String type= it.next();
-				history.put(type, new Integer(rank));
+				history.put(type, Integer.valueOf(rank));
 			}
 			return new RHSHistory(history);
 		}
